tests/e2e/uncategorized/test_error_formatting_data/fixtures/test_bxl_with_stacktrace.golden.stderr
# This file is @generated, regenerate by re-running test with `-- --env BUCK2_UPDATE_GOLDEN=1` appended to the test command

Command failed: 
Traceback (most recent call last):
  File <builtin>, in <module>
  * fail_no_stacktrace.bxl:18, in _fail_with_stacktrace_impl
      fail("failing with stacktrace")
error: fail: failing with stacktrace
  --> fail_no_stacktrace.bxl:18:5
   |
18 |     fail("failing with stacktrace")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

BXL FAILED
